# libft

./: .gitignore  CMakeLists.txt  Makefile  README.md  bonus.c  debug.c  exec  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putlnbr_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  (+23 more)
include/: colors.h  libft.h
includes/: colors.h  debug.h  libft.h
src/: ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_charjoin.c  ft_count_words.c  ft_is_charset.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_islower.c  ft_isprint.c  ft_isspace.c  ft_isupper.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putlnbr_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_sort.c  ft_split.c  ft_split_quote.c  ft_str_count_char.c  (+26 more)
src/chain/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
src/display/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putlnbr_fd.c  ft_putnbr_base_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
src/file/: copy_fd_contents.c  ft_list_dir.c
src/ft_printf/: ft_printf.c
src/get_next_line/: get_next_line.c
src/lst/: ft_lstadd_back.c  ft_lstadd_front.c
src/memory/: ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  (+1 more)
test/: ft_atoi_test.c
unitests/: main.c  unitest.h
(+87 files in other folders)
